[gd_scene load_steps=8 format=3 uid="uid://bow0jyhcbbe36"]

[ext_resource type="Script" uid="uid://c7hegiwxdjvxg" path="res://ui/hud/augments.gd" id="1_xya57"]
[ext_resource type="Theme" uid="uid://btofbsk47r5b3" path="res://ui/Themes/Old_PC_Theme.tres" id="2_n4pts"]
[ext_resource type="Texture2D" uid="uid://ictdsskxpq1b" path="res://assets/Art assets/DiscardSkill_Normal.png" id="3_vhtfr"]
[ext_resource type="Texture2D" uid="uid://b0f336inwi5sb" path="res://assets/Art assets/DiscardSkill_Pressed.png" id="4_7c40p"]
[ext_resource type="Texture2D" uid="uid://bmo1yi033bld" path="res://assets/Art assets/DiscardSkill_Hover.png" id="5_7qdqc"]
[ext_resource type="Texture2D" uid="uid://cnf7sf6uajknk" path="res://assets/Art assets/DiscardSkill_disabled.png" id="7_7c40p"]

[sub_resource type="LabelSettings" id="LabelSettings_a6qov"]
font_size = 50

[node name="Augments" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xya57")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.372549)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_n4pts")
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 120

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
color = Color(0.241156, 0.241156, 0.241156, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PICK AN AUGMENT"
label_settings = SubResource("LabelSettings_a6qov")

[node name="Augment_Box" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="aug_panel" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Left_Augment_Container" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Augment_Left_Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Augment_Left" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Augment_Left_Description" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Discard_Button_Left" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -50.0
offset_right = 182.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_vhtfr")
texture_pressed = ExtResource("4_7c40p")
texture_hover = ExtResource("5_7qdqc")
texture_disabled = ExtResource("7_7c40p")
ignore_texture_size = true
stretch_mode = 5

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="aug_panel2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Middle_Augment_Container" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Augment_Middle_Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Augment_Middle" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Augment_Middle_Description" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Discard_Button_Middle" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -50.0
offset_right = 182.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_vhtfr")
texture_pressed = ExtResource("4_7c40p")
texture_hover = ExtResource("5_7qdqc")
texture_disabled = ExtResource("7_7c40p")
ignore_texture_size = true
stretch_mode = 5

[node name="Control3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Control6" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Right_Augment_Container" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Augment_Right_Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Augment_Right" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Augment_Right_Description" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Discard_Button_Right" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -50.0
offset_right = 182.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_vhtfr")
texture_pressed = ExtResource("4_7c40p")
texture_hover = ExtResource("5_7qdqc")
texture_disabled = ExtResource("7_7c40p")
ignore_texture_size = true
stretch_mode = 5

[node name="Control4" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Pass_Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "PASS"

[node name="Control3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container/Augment_Left" to="." method="_on_augment_left_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel/Left_Augment_Container/Control/Discard_Button_Left" to="." method="_on_discard_button_left_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container/Augment_Middle" to="." method="_on_augment_middle_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/aug_panel2/Middle_Augment_Container/Control/Discard_Button_Middle" to="." method="_on_discard_button_middle_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container/Augment_Right" to="." method="_on_augment_right_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Augment_Box/Control6/Right_Augment_Container/Control/Discard_Button_Right" to="." method="_on_discard_button_right_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Pass_Button" to="." method="_on_pass_button_pressed"]
